--- a/generators/react/templates/package.json
+++ b/generators/react/templates/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --hot --inline"
   },
   "author": "dingquan",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "react-dom": "^15.4.2",
     "react-loaders": "^2.3.0",
     "style-loader": "^0.16.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
